--- a/Taylr/AVKit/Base.lproj/AVKit.storyboard
+++ b/Taylr/AVKit/Base.lproj/AVKit.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0DE-rZ-SWb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -42,10 +43,10 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="92U-XD-Hhd" userLabel="Overlay" customClass="TransparentView" customModule="Taylr" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="75" y="0.0" width="450" height="600"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="My Caption" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="srw-lj-jAO">
-                                        <rect key="frame" x="0.0" y="272" width="600" height="56"/>
+                                        <rect key="frame" x="0.0" y="272" width="450" height="56"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="56" id="smX-L1-Uxg"/>
@@ -57,6 +58,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" secondItem="92U-XD-Hhd" secondAttribute="height" multiplier="480:640" id="4Ri-A7-7Jd"/>
                                     <constraint firstAttribute="trailing" secondItem="srw-lj-jAO" secondAttribute="trailing" id="CxA-XX-Z4Y"/>
                                     <constraint firstItem="srw-lj-jAO" firstAttribute="centerY" secondItem="92U-XD-Hhd" secondAttribute="centerY" id="y8K-NK-W7b"/>
                                     <constraint firstItem="srw-lj-jAO" firstAttribute="leading" secondItem="92U-XD-Hhd" secondAttribute="leading" id="zd9-Xb-t2R"/>
@@ -98,15 +100,14 @@
                             <constraint firstItem="gUP-YK-Qgv" firstAttribute="leading" secondItem="Ahy-43-dzw" secondAttribute="leading" id="9TQ-dd-FMs"/>
                             <constraint firstAttribute="bottom" secondItem="jrS-6I-cjW" secondAttribute="bottom" id="BBw-sA-faP"/>
                             <constraint firstAttribute="trailing" secondItem="jrS-6I-cjW" secondAttribute="trailing" id="CoB-i3-2n0"/>
-                            <constraint firstAttribute="trailing" secondItem="92U-XD-Hhd" secondAttribute="trailing" id="F6L-Tn-f6N"/>
                             <constraint firstItem="92U-XD-Hhd" firstAttribute="top" secondItem="Mm1-nh-CJO" secondAttribute="top" id="Hrn-UM-UnF"/>
+                            <constraint firstItem="92U-XD-Hhd" firstAttribute="centerX" secondItem="Mm1-nh-CJO" secondAttribute="centerX" id="Hus-Ge-ycr"/>
                             <constraint firstItem="gUP-YK-Qgv" firstAttribute="top" secondItem="Wdl-9Q-6Ta" secondAttribute="bottom" constant="12" id="LpR-ke-rd3"/>
                             <constraint firstItem="xwQ-nI-9Ji" firstAttribute="bottom" secondItem="Ahy-43-dzw" secondAttribute="bottom" id="U62-Bk-UTE"/>
                             <constraint firstAttribute="bottom" secondItem="92U-XD-Hhd" secondAttribute="bottom" id="UYt-FI-yW4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xwQ-nI-9Ji" secondAttribute="trailing" id="XVI-KV-UGc"/>
                             <constraint firstItem="Ahy-43-dzw" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leadingMargin" id="b8G-VH-qIq"/>
                             <constraint firstItem="ccj-Kj-OsA" firstAttribute="top" secondItem="Ahy-43-dzw" secondAttribute="bottom" constant="12" id="bEN-zB-UK1"/>
-                            <constraint firstItem="92U-XD-Hhd" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" id="kzA-HI-sMr"/>
                             <constraint firstAttribute="trailing" secondItem="Wdl-9Q-6Ta" secondAttribute="trailing" id="lms-lh-Du9"/>
                             <constraint firstItem="Wdl-9Q-6Ta" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" id="r7B-zR-BbH"/>
                             <constraint firstItem="jrS-6I-cjW" firstAttribute="top" secondItem="Mm1-nh-CJO" secondAttribute="top" id="yaL-0W-3Og"/>
