--- a/Taylr/UserInterface/Me/Me.storyboard
+++ b/Taylr/UserInterface/Me/Me.storyboard
@@ -11,7 +11,7 @@
         </mutableArray>
     </customFonts>
     <scenes>
-        <!--Edit Hashtags View Controller-->
+        <!--Auto Complete Data Source-->
         <scene sceneID="CCY-8A-vmM">
             <objects>
                 <viewController id="mcp-Sh-vTg" customClass="EditHashtagsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,10 +23,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="im3-xr-AVB">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4jU-jy-5QE">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -44,8 +40,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="66" height="35"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="#eco101" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYZ-hM-vKj">
-                                                    <rect key="frame" x="8" y="8" width="52" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#eco101" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYZ-hM-vKj">
+                                                    <rect key="frame" x="8" y="8" width="50" height="19"/>
                                                     <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="14"/>
                                                     <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -69,17 +65,30 @@
                                     <outlet property="delegate" destination="mcp-Sh-vTg" id="fsd-0D-kcl"/>
                                 </connections>
                             </collectionView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jcT-YG-2h4" customClass="MLPAutoCompleteTextField">
+                                <rect key="frame" x="20" y="20" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="autoCompleteDataSource" destination="mcp-Sh-vTg" id="vNg-4c-qpH"/>
+                                    <outlet property="autoCompleteDelegate" destination="mcp-Sh-vTg" id="1QS-II-eJr"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="jcT-YG-2h4" firstAttribute="leading" secondItem="Pah-hI-MLH" secondAttribute="leadingMargin" id="5qP-f4-cDd"/>
                             <constraint firstItem="4jU-jy-5QE" firstAttribute="top" secondItem="Pah-hI-MLH" secondAttribute="topMargin" constant="64" id="ERe-M1-A0C"/>
                             <constraint firstAttribute="trailing" secondItem="4jU-jy-5QE" secondAttribute="trailing" id="JOU-o9-Zmo"/>
+                            <constraint firstItem="jcT-YG-2h4" firstAttribute="top" secondItem="un5-vE-2AL" secondAttribute="bottom" id="Rza-lz-hLX"/>
                             <constraint firstItem="4jU-jy-5QE" firstAttribute="leading" secondItem="Pah-hI-MLH" secondAttribute="leading" id="aob-hH-Xhk"/>
                             <constraint firstAttribute="bottom" secondItem="4jU-jy-5QE" secondAttribute="bottom" id="mLY-bT-I1O"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jcT-YG-2h4" secondAttribute="trailing" id="zHX-gZ-0yW"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="4jU-jy-5QE" id="1Q3-NB-0jv"/>
+                        <outlet property="textField" destination="jcT-YG-2h4" id="Y7L-I8-oOG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rYw-uy-MTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
